--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jonnyw/php-phantomjs",
+    "name": "popouille/php-phantomjs",
     "description": "A PHP wrapper for loading pages through PhantomJS",
     "keywords": ["PhantomJS", "Testing", "Headless Browser"],
 	"type": "library",
@@ -13,16 +13,16 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0",
-        "symfony/config": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/filesystem": "~2.3|~3.0",
-        "symfony/yaml": "~2.3|~3.0",
-        "twig/twig": "~1.16",
+        "php": ">=7.1.3",
+        "symfony/config": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/dependency-injection": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/filesystem": "~2.3|~3.0|~4.0|~5.0",
+        "symfony/yaml": "~2.3|~3.0|~4.0|~5.0",
+        "twig/twig": "~1.16|~2",
         "jakoch/phantomjs-installer": "2.1.1-p08"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~6.0",
         "zendframework/zendpdf": "~2.0",
         "smalot/pdfparser": "~0.9"
     },
