--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         }
     ],
     "minimum-stability": "stable",
+    "replace": {
+     	"jonnyw/php-phantomjs": "*"
+    },
     "require": {
         "php": ">=7.1.3",
         "symfony/config": "~2.3|~3.0|~4.0|~5.0",
